@@ -326,15 +326,19 @@ $output = <<<EOT
   function set_time() {
     var time = Math.floor(Date.parse(document.getElementById("datetime").value) / 1000);
     var span = document.getElementById("timespan").value;
-    start = Math.floor(time - +span / 2);
-    stop = Math.floor(time + +span / 2);
-    hide_timepicker();
-    reload_content();
+    if (isNaN(time)) {
+      alert("Cannot parse datetime format: " + document.getElementById("datetime").value);
+    } else {
+      start = Math.floor(time - +span / 2);
+      stop = Math.floor(time + +span / 2);
+      hide_timepicker();
+      reload_content();
+    }
   }
   function set_now() {
     var date = new Date();
     date.setTime(Math.floor(date.getTime() / 1000) * 1000);
-    document.getElementById("datetime").value = date.toISOString();
+    document.getElementById("datetime").value = date.toString();
   }
   function reload_content() {
     scrolledX = window.scrollX;
@@ -387,7 +391,7 @@ $output = <<<EOT
   function show_timepicker() {
     var date = new Date();
     date.setTime((start + (stop - start)/2)*1000);
-    document.getElementById("datetime").value = date.toISOString();
+    document.getElementById("datetime").value = date.toString();
     document.getElementById("timepicker").style.visibility="visible";
     document.getElementById("panel").style.visibility="hidden";
   }
@@ -450,7 +454,7 @@ $output .= <<<EOT
 <div id="permalink"><span id="permalinkSpan">Use the contextual menu (e.g. right click) to copy permalink</span><a id="permalinkA" href=".">PERMALINK</a></div>
 <div id="waiter">PROCESSING DATA, PLEASE WAIT...</div>
 <div id="timepicker" align="center">
-ref date:<input id="datetime" type="datetime"/><button type="button" onclick="set_now()">now</button>
+ref date:<input id="datetime" type="text" size="40" placeholder="Enter a datetime..."/><button type="button" onclick="set_now()">now</button>
 timespan:<select id="timespan"/>
 EOT;
 foreach ($CONF['nav_timespans'] as $key => $value) {
